Update liferay.md