@@ -59,3 +59,5 @@ NOTE: even if you re-deploy it, it is always in the stop(Resolved) state!
 + remember to set ```liferay.home``` in ```portal-setup-wizard.properties```
 + delete ```/osgi/state```
 + change if needed database connection info in ```/tomcat/conf/context.xml```
++ increase if needed ```-Xmx``` and ```-XX:MaxPermSize=``` inside ```tomcat/bin/setenv.*```
+
